[package]
name = "html5_engine"
version = "0.1.0"
authors = ["Zerve"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[patch.crates-io]
wasm-bindgen-shared = { path = '../wasm-bindgen/crates/shared' }
js-sys = { path = '../wasm-bindgen/crates/js-sys' }
wasm-bindgen = { path = '../wasm-bindgen' }
wasm-bindgen-futures = { path = '../wasm-bindgen/crates/futures' }
wasm-bindgen-test = { path = '../wasm-bindgen/crates/test' }
web-sys = { path = '../wasm-bindgen/crates/web-sys' }

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "0.3.35"
lazy_static = "1.4.0"
nalgebra = "0.19.0"
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
cgmath = "0.17.0"
legion = "0.2.1"
gltf = "0.15.0"


[dependencies.web-sys]
version = "*"
features = [
    'Document',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'MouseEvent',
    "Gpu",
    "GpuAdapter",
    "GpuAddressMode",
    "GpuBindGroup",
    "GpuBindGroupBinding",
    "GpuBindGroupDescriptor",
    "GpuBindGroupLayout",
    "GpuBindGroupLayoutBinding",
    "GpuBindGroupLayoutDescriptor",
    "GpuBindingType",
    "GpuBlendDescriptor",
    "GpuBlendFactor",
    "GpuBlendOperation",
    "GpuBuffer",
    "GpuBufferBinding",
    "GpuBufferCopyView",
    "GpuBufferDescriptor",
    "GpuBufferUsage",
    "GpuCanvasContext",
    "GpuColorDict",
    "GpuColorStateDescriptor",
    "GpuColorWrite",
    "GpuCommandBuffer",
    "GpuCommandBufferDescriptor",
    "GpuCommandEncoder",
    "GpuCommandEncoderDescriptor",
    "GpuCompareFunction",
    "GpuComputePassDescriptor",
    "GpuComputePassEncoder",
    "GpuComputePipeline",
    "GpuComputePipelineDescriptor",
    "GpuCullMode",
    "GpuDepthStencilStateDescriptor",
    "GpuDevice",
    "GpuDeviceDescriptor",
    "GpuDeviceLostInfo",
    "GpuErrorFilter",
    "GpuExtensions",
    "GpuExtent3dDict",
    "GpuFence",
    "GpuFenceDescriptor",
    "GpuFilterMode",
    "GpuFrontFace",
    "GpuImageBitmapCopyView",
    "GpuIndexFormat",
    "GpuInputStepMode",
    "GpuLimits",
    "GpuLoadOp",
    "GpuObjectDescriptorBase",
    "GpuOrigin2dDict",
    "GpuOrigin3dDict",
    "GpuOutOfMemoryError",
    "GpuPipelineDescriptorBase",
    "GpuPipelineLayout",
    "GpuPipelineLayoutDescriptor",
    "GpuPowerPreference",
    "GpuPrimitiveTopology",
    "GpuProgrammablePassEncoder",
    "GpuProgrammableStageDescriptor",
    "GpuQueue",
    "GpuRasterizationStateDescriptor",
    "GpuRenderBundle",
    "GpuRenderBundleDescriptor",
    "GpuRenderBundleEncoder",
    "GpuRenderBundleEncoderDescriptor",
    "GpuRenderEncoderBase",
    "GpuRenderPassColorAttachmentDescriptor",
    "GpuRenderPassDepthStencilAttachmentDescriptor",
    "GpuRenderPassDescriptor",
    "GpuRenderPassEncoder",
    "GpuRenderPipeline",
    "GpuRenderPipelineDescriptor",
    "GpuRequestAdapterOptions",
    "GpuSampler",
    "GpuSamplerDescriptor",
    "GpuShaderModule",
    "GpuShaderModuleDescriptor",
    "GpuShaderStage",
    "GpuStencilOperation",
    "GpuStencilStateFaceDescriptor",
    "GpuStoreOp",
    "GpuSwapChain",
    "GpuSwapChainDescriptor",
    "GpuTexture",
    "GpuTextureAspect",
    "GpuTextureComponentType",
    "GpuTextureCopyView",
    "GpuTextureDescriptor",
    "GpuTextureDimension",
    "GpuTextureFormat",
    "GpuTextureUsage",
    "GpuTextureView",
    "GpuTextureViewDescriptor",
    "GpuTextureViewDimension",
    "GpuValidationError",
    "GpuVertexAttributeDescriptor",
    "GpuVertexBufferDescriptor",
    "GpuVertexFormat",
    "GpuVertexInputDescriptor",
    "Navigator",
    "Window",
]
